FCT : MVC et Web API Complété

--- a/1.1-MVCetWebAPI/MVCEtWebAPI/WebAPI/WebAPI.csproj
+++ b/1.1-MVCetWebAPI/MVCEtWebAPI/WebAPI/WebAPI.csproj
@@ -4,11 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>aspnet-MVCEtWebAPI-dd87a490-853b-4da5-9c55-418e82f11ee2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.19" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
